--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.2.1",
     "react-on-screen": "^2.1.1",
     "react-scripts": "5.0.1",
